sam-internal/k8s-out/prd/prd-sam/casam-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  annotations:
    manifestctl.sam.data.sfdc.net/swagger: disable
  name: ingressgateway
  namespace: core-on-sam-sp2
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 8085
      protocol: HTTP
  - hosts:
    - '*'
    port:
      name: https
      number: 8443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      privateKey: /etc/certs/key.pem
      serverCertificate: /etc/certs/cert-chain.pem
